feat: agregar links

--- a/Markup a Readme/index.html
+++ b/Markup a Readme/index.html
@@ -6,30 +6,28 @@
     <title>markup-readme</title>
   </head>
   <body>
-    <h1>React</h1>
+    <h1><a href="https://react.dev/">React</a></h1>
     <p>React is a JavaScript library for building user interfaces.</p>
 
     <li>
-      Declarative:
-      <p>
-        React makes it painless to create interactive UIs. Design simple views
-        for each state in your application, and React will efficiently update
-        and render just the right components when your data changes. Declarative
-        views make your code more predictable, simpler to understand, and easier
-        to debug.
-      </p>
+      <b>Declarative:</b> React makes it painless to create interactive UIs.
+      Design simple views for each state in your application, and React will
+      efficiently update and render just the right components when your data
+      changes. Declarative views make your code more predictable, simpler to
+      understand, and easier to debug.
     </li>
     <li>
-      Component-Based: Build encapsulated components that manage their own
-      state, then compose them to make complex UIs. Since component logic is
+      <b> Component-Based:</b> Build encapsulated components that manage their
+      own state, then compose them to make complex UIs. Since component logic is
       written in JavaScript instead of templates, you can easily pass rich data
       through your app and keep the state out of the DOM.
     </li>
     <li>
-      Learn Once, Write Anywhere: We don't make assumptions about the rest of
-      your technology stack, so you can develop new features in React without
-      rewriting existing code. React can also render on the server using Node
-      and power mobile apps using React Native.
+      <b> Learn Once, Write Anywhere:</b> We don't make assumptions about the
+      rest of your technology stack, so you can develop new features in React
+      without rewriting existing code. React can also render on the server using
+      Node and power mobile apps using
+      <a href="https://reactnative.dev/">React Native.</a>
     </li>
 
     <a href="https://react.dev/learn"
@@ -41,37 +39,71 @@
       use as little or as much React as you need:
     </p>
 
-    <li>Use Online Playgrounds to get a taste of React</li>
-    <li>Add React to a Website as a '&lt;script&gt;' tag in one minute</li>
     <li>
-      Create a New React App if you're looking for a powerful JavaScript
-      toolchain
+      Use
+      <a href="https://react.dev/learn#online-playgrounds"
+        >Online Playgrounds</a
+      >
+      to get a taste of React
+    </li>
+    <li>
+      <a href="https://react.dev/learn/add-react-to-an-existing-project"
+        >Add React to a Website</a
+      >
+      as a '&lt;script&gt;' tag in one minute
+    </li>
+    <li>
+      <a href="https://react.dev/learn/creating-a-react-app"
+        >Create a New React App</a
+      >
+      if you're looking for a powerful JavaScript toolchain
     </li>
 
     <p>
-      You can use React as a '&lt;script&gt;' tag from a CDN, or as a react
-      package on npm.
+      You can use React as a '&lt;script&gt;' tag from a
+      <a href="https://legacy.reactjs.org/docs/cdn-links.html">CDN</a>, or as a
+      react package on <a href="https://www.npmjs.com/package/react">npm.</a>
     </p>
     <h2>Documetation</h2>
 
     <p>
-      You can find the React documentation on the website. <br />
-      Check out the Getting Started page for a quick overview. <br />
+      You can find the React documentation
+      <a href="https://react.dev/">on the website. </a><br />
+      Check out the <a href="https://react.dev/learn">Getting Started</a> page
+      for a quick overview. <br />
       The documentation is divided into several sections: <br />
     </p>
 
-    <li>Tutorial</li>
-    <li>Main Concepts</li>
-    <li>Advance Guides</li>
-    <li>API Reference</li>
-    <li>Where to Get Support</li>
-    <li>Contributing Guide</li>
+    <li><a href="https://react.dev/learn/tutorial-tic-tac-toe">Tutorial</a></li>
+    <li>
+      <a href="https://legacy.reactjs.org/docs/hello-world.html"
+        >Main Concepts</a
+      >
+    </li>
+    <li>
+      <a href="https://legacy.reactjs.org/docs/jsx-in-depth.html"
+        >Advance Guides</a
+      >
+    </li>
+    <li>
+      <a href="https://legacy.reactjs.org/docs/react-api.html">API Reference</a>
+    </li>
+    <li><a href="https://react.dev/community">Where to Get Support</a></li>
+    <li>
+      <a href="https://legacy.reactjs.org/docs/how-to-contribute.html"
+        >Contributing Guide</a
+      >
+    </li>
 
-    <p>You can improve it by sending pull requests to this repository.</p>
+    <p>
+      You can improve it by sending pull requests to
+      <a href="https://github.com/reactjs/react.dev">this repository.</a>
+    </p>
     <h2>Examples</h2>
     <p>
-      We have several examples on the website. Here is the first one to get you
-      started:
+      We have several examples
+      <a href="https://react.dev/">on the website.</a> Here is the first one to
+      get you started:
     </p>
     <pre><code>import { createRoot } from "react-dom/client";
 function HelloMessage({ name }) {
@@ -83,11 +115,22 @@ root.render(&lt;HelloMessage name="Taylor" /&gt;);</code></pre>
     <p>
       This example will render "Hello Taylor" into a container on the page.
       <br />
-      You'll notice that we used an HTML-like syntax; we call it JSX. JSX is not
-      required to use React, but it makes code more readable, and writing it
-      feels like writing HTML. If you're using React as a '&lt;script&gt;' tag,
-      read this section on integrating JSX; otherwise, the recommended
-      JavaScript toolchains handle it automatically
+      You'll notice that we used an HTML-like syntax;
+      <a href="https://legacy.reactjs.org/docs/introducing-jsx.html"
+        >we call it JSX.</a
+      >
+      JSX is not required to use React, but it makes code more readable, and
+      writing it feels like writing HTML. If you're using React as a
+      '&lt;script&gt;' tag, read
+      <a
+        href="https://react.dev/learn/add-react-to-an-existing-project#optional-try-react-with-jsx"
+        >this section</a
+      >
+      on integrating JSX; otherwise, the
+      <a href="https://react.dev/learn/creating-a-react-app"
+        >recommended JavaScript toolchains</a
+      >
+      handle it automatically
     </p>
     <p></p>
 
@@ -99,24 +142,37 @@ root.render(&lt;HelloMessage name="Taylor" /&gt;);</code></pre>
       bugfixes and improvements. Read below to learn how you can take part in
       improving React.
     </p>
-    <h3>Code of Conduct</h3>
+    <h3>
+      <a href="https://opensource.fb.com/code-of-conduct/">Code of Conduct</a>
+    </h3>
 
     <p>
       Facebook has adopted a Code of Conduct that we expect project participants
-      to adhere to. Please read the full text so that you can understand what
-      actions will and will not be tolerated.
+      to adhere to. Please read
+      <a href="https://opensource.fb.com/code-of-conduct/">the full text </a>so
+      that you can understand what actions will and will not be tolerated.
     </p>
-    <h3>Contributing Guide</h3>
+    <h3>
+      <a href="https://legacy.reactjs.org/docs/how-to-contribute.html"
+        >Contributing Guide</a
+      >
+    </h3>
     <p>
-      Read our contributing guide to learn about our development process, how to
-      propose bugfixes and improvements, and how to build and test your changes
-      to React.
+      Read our
+      <a href="https://legacy.reactjs.org/docs/how-to-contribute.html"
+        >contributing guide</a
+      >
+      to learn about our development process, how to propose bugfixes and
+      improvements, and how to build and test your changes to React.
     </p>
     <h3>Good First Issues</h3>
     <p>
       To help you get your feet wet and get you familiar with our contribution
-      process, we have a list of good first issues that contain bugs that have a
-      relatively limited scope. This is a great place to get started.
+      process, we have a list of
+      <a href="https://github.com/facebook/react/labels/good%20first%20issue"
+        >good first issues </a
+      >that contain bugs that have a relatively limited scope. This is a great
+      place to get started.
     </p>
     <h3>License</h3>
     <p>React is MIT licensed.</p>
