feat:cambio de ID´S por semantica

--- a/Selectors without classes and IDs/index.html
+++ b/Selectors without classes and IDs/index.html
@@ -9,51 +9,58 @@
       Colombia
     </title>
   </head>
+
   <body>
-    <picture>
+    <header>
       <h1>Sostenibilidad y cuidado del planeta: prioridades del consumo</h1>
-    </picture>
+    </header>
     <article>
-      <div class="barra-lateral">
+      <aside>
         <figure>
           <img
             src="https://www.ey.com/content/dam/content-fragments/ey-unified-site/ey-com/people/local/es_mx/images/f/ey-francisco-olivares-meta.jpg.transform/up-authors-and-contributors-150/img.jpg"
           />
-          <a href="https://www.ey.com/es_mx/people/francisco-olivares-bello" target="_blank">Francisco Olivares Bello</a>
+          <a
+            href="https://www.ey.com/es_mx/people/francisco-olivares-bello"
+            target="_blank"
+            >Francisco Olivares Bello</a
+          >
         </figure>
         <p>Consumer Products & Retail Deputy, EY Latin America</p>
-        <p>
+        <time>
           <span>99 minute read </span>
           <span>09 sept. 2022 </span>
-        </p>
-      </div>
+        </time>
+      </aside>
       <main>
-        <h2>
-          Identificamos cinco segmentos de consumidores con distintas
-          prioridades donde se destaca el cuidado al planeta.
-        </h2>
-        <div>
-          <p>
-            <b>En resumen</b>
-          </p>
-          <ul>
-            <li>
-              <em
-                >A nivel global, el 85% de los consumidores usan bolsas
-                reutilizables para realizar sus compras.</em
-              >
-            </li>
-            <li>
-              24% se aleja de las marcas que no realizan ninguna contribución al
-              medioambiente.
-            </li>
-            <li>
-              En contraste, 54% considera que cuesta demasiado comprar productos
-              sostenibles.
-            </li>
-          </ul>
-        </div>
-        <div>
+        <section>
+          <h2>
+            Identificamos cinco segmentos de consumidores con distintas
+            prioridades donde se destaca el cuidado al planeta.
+          </h2>
+          <div>
+            <p>
+              <b>En resumen</b>
+            </p>
+            <ul>
+              <li>
+                <em
+                  >A nivel global, el 85% de los consumidores usan bolsas
+                  reutilizables para realizar sus compras.</em
+                >
+              </li>
+              <li>
+                24% se aleja de las marcas que no realizan ninguna contribución
+                al medioambiente.
+              </li>
+              <li>
+                En contraste, 54% considera que cuesta demasiado comprar
+                productos sostenibles.
+              </li>
+            </ul>
+          </div>
+        </section>
+        <section>
           <p>
             La décima entrega del <em>EY Future Consumer Index</em> identificó
             cinco segmentos de consumidores emergentes con distintas
@@ -86,25 +93,25 @@
             conscientes del impacto ambiental de sus compras y han comenzado a
             adoptar estilos de vida sostenibles. Para muestra:
           </p>
-        </div>
-        <div>
+        </section>
+        <figure>
           <span>El</span>
-          <div class="estadisticas-numero"><span>85</span><span>%</span></div>
+          <mark><span>85</span><span>%</span></mark>
           <span>usa bolsas reutilizables para realizar sus compras.</span>
-        </div>
-        <div>
+        </figure>
+        <section>
           <p>
             Asimismo, el estudio encontró que 5 de cada 10 personas han
             comenzado a implementar principios sostenible en su día a día; por
             ejemplo:
           </p>
-        </div>
-        <div>
+        </section>
+        <figure>
           <span>El</span>
-          <div class="estadistica-numero"><span>82</span><span>%</span></div>
+          <mark><span>82</span><span>%</span></mark>
           <span>realiza acciones específicas para ahorrar agua.</span>
-        </div>
-        <div>
+        </figure>
+        <section>
           <p>
             La transparencia, el abastecimiento ético y la capacidad de
             reciclaje en diversos productos han sido las principales prioridades
@@ -112,26 +119,26 @@
             en una migración constante hacia compras sostenibles. Dentro de este
             rubro se puede destacar que:
           </p>
-          <div class="tarjeta">
-            <div>
-              <div>
+          <section>
+            <article>
+              <header>
                 <span>32%</span>
-              </div>
+              </header>
               <h3>
                 De los consumidores muestran una tendencia favorable por marcas
                 cuyos principios se enfoncan en la economía circular.
               </h3>
-            </div>
-            <div>
-              <div>
+            </article>
+            <article>
+              <header>
                 <span>24%</span>
-              </div>
+              </header>
               <h3>
                 Buscan alejarse de las marcas que no realizan ninguna
                 contribución al medioambiente.
               </h3>
-            </div>
-          </div>
+            </article>
+          </section>
           <p>
             Por otra parte, existen diversos factores disuasivos para la compra
             de productos sostenibles, donde los altos precios (67%) y la baja
@@ -140,44 +147,44 @@
             para la toma de decisiones de los consumidores que buscan opciones
             sostenibles. A nivel global:
           </p>
-        </div>
-        <div class="contenedor-estadisticas">
-          <div>
+        </section>
+        <section>
+          <figure>
             <span>El</span>
-            <div class="estadistica-numero"><span>54</span><span>%</span></div>
+            <mark><span>54</span><span>%</span></mark>
             <span
               >de los encuestados considera que cuesta demasiado comprar
               productos sostenibles.</span
             >
-          </div>
-          <div>
+          </figure>
+          <figure>
             <span>El</span>
-            <div class="estadistica-numero"><span>58</span><span>%</span></div>
+            <mark><span>58</span><span>%</span></mark>
             <span
               >afirma que toma acciones a favor del medioambiente cuando obtiene
               un ahorro.</span
             >
-          </div>
-        </div>
-        <div>
+          </figure>
+        </section>
+        <section>
           <p>
             No obstante, los consumidores están expresando comportamientos más
             sostenibles a través de un consumo más moderado:
           </p>
-        </div>
-        <div class="contenedor-estadisticas">
-          <div>
+        </section>
+        <section>
+          <figure>
             <span>El</span>
-            <div class="estadistica-numero"><span>87</span><span>%</span></div>
+            <mark><span>87</span><span>%</span></mark>
             <span>se esfuerza en reducir el desperdicio de alimentos.</span>
-          </div>
-          <div>
+          </figure>
+          <figure>
             <span>El</span>
-            <div class="estadistica-numero"><span>69</span><span>%</span></div>
+            <mark><span>69</span><span>%</span></mark>
             <span>intenta reparar productos en vez de comprar.</span>
-          </div>
-        </div>
-        <div>
+          </figure>
+        </section>
+        <footer>
           <h6>Desafíos para las marcas</h6>
           <p>
             Las empresas deben adoptar un enfoque integral al comunicar sus
@@ -202,7 +209,7 @@
             múltiples oportunidades para generar interés sobre sus prácticas de
             sostenibilidad.
           </p>
-        </div>
+        </footer>
       </main>
     </article>
   </body>
