style: correcion de semantica del HTML

--- a/Selectors without classes and IDs/index.html
+++ b/Selectors without classes and IDs/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,6 +19,7 @@
         <figure>
           <img
             src="https://www.ey.com/content/dam/content-fragments/ey-unified-site/ey-com/people/local/es_mx/images/f/ey-francisco-olivares-meta.jpg.transform/up-authors-and-contributors-150/img.jpg"
+            alt="Francisco Olivares Bello, Consumer Products & Retail Deputy, EY Latin America"
           />
           <a
             href="https://www.ey.com/es_mx/people/francisco-olivares-bello"
@@ -184,8 +185,8 @@
             <span>intenta reparar productos en vez de comprar.</span>
           </figure>
         </section>
-        <footer>
-          <h6>Desafíos para las marcas</h6>
+        <section>
+          <h4>Desafíos para las marcas</h4>
           <p>
             Las empresas deben adoptar un enfoque integral al comunicar sus
             esfuerzos en temas de sostenibilidad, tanto en tiendas físicas como
@@ -209,7 +210,7 @@
             múltiples oportunidades para generar interés sobre sus prácticas de
             sostenibilidad.
           </p>
-        </footer>
+        </section>
       </main>
     </article>
   </body>
