--- a/Sidebar/index.html
+++ b/Sidebar/index.html
@@ -10,11 +10,10 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <aside class="sidebar">
       <div class="logo-container">
-        <div class="main-logo">W</div>
+        <label class="main-logo">W</label>
         <div class="logo-dropdown">
           <div class="logo-item">
             <div class="logo-icon mercedes">M</div>
@@ -46,27 +45,25 @@
           </div>
         </div>
       </div>
-
       <nav aria-label="Navegación principal">
         <div class="nav-item search-item">
+          <div class="nav-icon">
+            <i class="fas fa-search search-icon"></i>
+          </div>
           <input type="text" class="nav-search-input" placeholder="Buscar..." />
-          <i class="fas fa-search search-icon"></i>
         </div>
-
         <a href="#" class="nav-item">
           <div class="nav-icon">
             <i class="fas fa-inbox"></i>
           </div>
           <div class="nav-text">Inbox #2</div>
         </a>
-
         <a href="#" class="nav-item">
           <div class="nav-icon">
-            <i class="fas fa-chart-line"></i>
+            <i class="fas fa-bell"></i>
           </div>
           <div class="nav-text">Activity #3</div>
         </a>
-
         <a href="#" class="nav-item">
           <div class="nav-icon">
             <i class="fas fa-calendar-alt"></i>
@@ -75,11 +72,6 @@
         </a>
       </nav>
       <hr class="divider" />
-
-      <div class="section-title-row">
-        <span class="section-title-left">Shared</span>
-        <span class="section-title-plus">+</span>
-      </div>
       <nav aria-label="Boosts">
         <a href="#" class="nav-item">
           <div class="nav-icon">
@@ -94,8 +86,6 @@
           <div class="nav-text">Documents</div>
         </a>
       </nav>
-
-      <h2 class="section-title">Projects</h2>
       <nav aria-label="Projects">
         <a href="#" class="nav-item personal">
           <div class="nav-icon">
@@ -103,21 +93,18 @@
           </div>
           <div class="nav-text">Personal</div>
         </a>
-
         <a href="#" class="nav-item business">
           <div class="nav-icon">
             <i class="fas fa-briefcase"></i>
           </div>
           <div class="nav-text">Business</div>
         </a>
-
         <a href="#" class="nav-item travel">
           <div class="nav-icon">
             <i class="fas fa-plane"></i>
           </div>
           <div class="nav-text">Travel</div>
         </a>
-
         <a href="#" class="nav-item">
           <div class="nav-icon">
             <i class="fas fa-plus"></i>
@@ -125,9 +112,7 @@
           <div class="nav-text">Add New Project</div>
         </a>
       </nav>
-
       <hr class="divider" />
-
       <nav aria-label="Configuración y ayuda">
         <a href="#" class="nav-item">
           <div class="nav-icon">
@@ -135,7 +120,6 @@
           </div>
           <div class="nav-text">Settings</div>
         </a>
-
         <a href="#" class="nav-item">
           <div class="nav-icon">
             <i class="fas fa-question-circle"></i>
@@ -143,18 +127,19 @@
           <div class="nav-text">Help</div>
         </a>
       </nav>
-
       <footer class="profile-container">
-        <div class="profile-avatar">
-          <img
-            src="https://randomuser.me/api/portraits/women/44.jpg"
-            alt="Profile"
-          />
-        </div>
-        <div class="profile-info">
-          <div class="profile-name">Sandra Marx</div>
-          <div class="profile-email">sandra@gmail.com</div>
-        </div>
+        <label class="profile-toggle-label">
+          <div class="profile-avatar">
+            <img
+              src="https://randomuser.me/api/portraits/women/44.jpg"
+              alt="Profile"
+            />
+          </div>
+          <div class="profile-info">
+            <div class="profile-name">Sandra Marx</div>
+            <div class="profile-email">sandra@gmail.com</div>
+          </div>
+        </label>
         <div class="profile-dropdown">
           <div class="profile-item">
             <i class="fas fa-file-alt"></i> Documents
