style: arregro de los items con los drops

--- a/Sidebar/index.html
+++ b/Sidebar/index.html
@@ -14,15 +14,28 @@
     <aside class="sidebar">
       <div class="logo-container">
         <label class="main-logo">W</label>
+
         <div class="logo-dropdown">
-          <div class="logo-item">
-            <div class="logo-icon mercedes">M</div>
+          <div class="logo-item mercedes">
+            <span class="logo-dots">
+              <i class="fas fa-grip-vertical"></i>
+            </span>
+            <div class="logo-icon mercedes">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/9/90/Mercedes-Logo.svg"
+                alt="Mercedes"
+                style="width: 28px; height: 28px"
+              />
+            </div>
             <div>
               <div class="logo-text">Mercedes</div>
               <div class="logo-meta">Team Plan • 4.5k members</div>
             </div>
           </div>
           <div class="logo-item">
+            <span class="logo-dots">
+              <i class="fas fa-grip-vertical"></i>
+            </span>
             <div class="logo-icon personal">S</div>
             <div>
               <div class="logo-text">Sandra</div>
@@ -30,14 +43,28 @@
             </div>
           </div>
           <div class="logo-item">
-            <div class="logo-icon widelab">W</div>
+            <span class="logo-dots">
+              <i class="fas fa-grip-vertical"></i>
+            </span>
+            <div class="logo-icon widelab">W
+              
+            </div>
             <div>
               <div class="logo-text">widelab</div>
               <div class="logo-meta">Team Plan • 40 members</div>
             </div>
           </div>
           <div class="logo-item">
-            <div class="logo-icon figma">F</div>
+            <span class="logo-dots">
+              <i class="fas fa-grip-vertical"></i>
+            </span>
+            <div class="logo-icon figma">
+              <img
+                src="https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg"
+                alt="Figma"
+                style="width: 28px; height: 28px"
+              />
+            </div>
             <div>
               <div class="logo-text">Figma</div>
               <div class="logo-meta">Team Plan • 556 members</div>
@@ -71,9 +98,9 @@
           <div class="nav-text">Schedule #4</div>
         </a>
       </nav>
-      <hr class="divider" />
+
       <nav aria-label="Boosts">
-        <a href="#" class="nav-item">
+        <a href="#" class="nav-item Boosts">
           <div class="nav-icon">
             <i class="fas fa-file-alt"></i>
           </div>
@@ -105,16 +132,16 @@
           </div>
           <div class="nav-text">Travel</div>
         </a>
-        <a href="#" class="nav-item">
+        <a href="#" class="nav-item plus">
           <div class="nav-icon">
             <i class="fas fa-plus"></i>
           </div>
           <div class="nav-text">Add New Project</div>
         </a>
       </nav>
-      <hr class="divider" />
+
       <nav aria-label="Configuración y ayuda">
-        <a href="#" class="nav-item">
+        <a href="#" class="nav-item settings">
           <div class="nav-icon">
             <i class="fas fa-cog"></i>
           </div>
@@ -127,6 +154,7 @@
           <div class="nav-text">Help</div>
         </a>
       </nav>
+
       <footer class="profile-container">
         <label class="profile-toggle-label">
           <div class="profile-avatar">
@@ -135,23 +163,28 @@
               alt="Profile"
             />
           </div>
-          <div class="profile-info">
-            <div class="profile-name">Sandra Marx</div>
-            <div class="profile-email">sandra@gmail.com</div>
-          </div>
         </label>
         <div class="profile-dropdown">
-          <div class="profile-item">
-            <i class="fas fa-file-alt"></i> Documents
+          <div class="profile-info">
+            <div class="profile-avatar">
+              <img
+                src="https://randomuser.me/api/portraits/women/44.jpg"
+                alt="Profile"
+              />
+            </div>
+            <div class="profile-texts">
+              <div class="profile-name">Sandra Marx</div>
+              <div class="profile-email">sandra@gmail.com</div>
+            </div>
           </div>
           <div class="profile-item">
-            <i class="fas fa-plug"></i> Integrations
+            <i class="fas fa-folder"></i> Interaction
           </div>
           <div class="profile-item"><i class="fas fa-history"></i> History</div>
           <div class="profile-item">
-            <i class="fas fa-star"></i> Upgrade to Pro
+            <i class="fas fa-star" style="color: #ffd700"></i> Upgrade to Pro
           </div>
-          <div class="profile-item">
+          <div class="profile-item Update">
             <i class="fas fa-sync-alt"></i> Update App
           </div>
           <div class="profile-item">
